[gd_scene load_steps=14 format=3 uid="uid://ct37gf87dalbt"]

[ext_resource type="Script" path="res://scripts/ParallaxBackground.gd" id="1_4jfgd"]
[ext_resource type="Script" path="res://scripts/endingcontrol.gd" id="1_lvwey"]
[ext_resource type="Texture2D" uid="uid://du2yihjknen67" path="res://assets/background/bg-160px-sky.png" id="2_s1cvc"]
[ext_resource type="Texture2D" uid="uid://bxeyjn03443p7" path="res://assets/background/bg-160px-houses.png" id="3_7jyyv"]
[ext_resource type="FontFile" uid="uid://crvxl8roi54c2" path="res://assets/Early GameBoy.ttf" id="4_vllma"]
[ext_resource type="Texture2D" uid="uid://ch0txslpfpuk4" path="res://assets/acorcui.png" id="5_5dy16"]
[ext_resource type="Script" path="res://scripts/ending.gd" id="5_bfpkg"]
[ext_resource type="Script" path="res://scripts/ending2.gd" id="7_gwj8m"]
[ext_resource type="Texture2D" uid="uid://bq6jx741k3yq8" path="res://assets/Double-take-tilemap.png" id="9_xenls"]
[ext_resource type="Texture2D" uid="uid://bb1nbmd5fq3bx" path="res://assets/squirrel.png" id="10_ehr8t"]
[ext_resource type="AudioStream" uid="uid://ben6b3sdhko53" path="res://assets/music/3music.mp3" id="11_y7jre"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2nklp"]
texture = ExtResource("9_xenls")
0:0/0 = 0
1:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
4:6/0 = 0
4:7/0 = 0

[sub_resource type="TileSet" id="TileSet_hrf1v"]
sources/0 = SubResource("TileSetAtlasSource_2nklp")

[node name="ending" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lvwey")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true
script = ExtResource("1_4jfgd")

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0)
motion_mirroring = Vector2(360, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Sky"]
texture_filter = 1
position = Vector2(-25, 0)
scale = Vector2(1, 1.125)
texture = ExtResource("2_s1cvc")
centered = false

[node name="Houses" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-1, 2)
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(360, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Houses"]
position = Vector2(-24, 16)
texture = ExtResource("3_7jyyv")
centered = false

[node name="storycontainer" type="Panel" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 304.0
offset_bottom = 101.0

[node name="endingstory" type="Label" parent="storycontainer"]
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 287.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("4_vllma")
theme_override_font_sizes/font_size = 7
text = "You have successfully saved the squirrel with your time-travel abilities. Unknown to you, the squirrel pledges a life debt to you."
autowrap_mode = 2
script = ExtResource("5_bfpkg")

[node name="endingstory2" type="Label" parent="storycontainer"]
visible = false
layout_mode = 0
offset_left = 9.0
offset_top = 52.0
offset_right = 287.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("4_vllma")
theme_override_font_sizes/font_size = 7
text = "In your darkest hour, the squirrel arrivesâ€¦"
autowrap_mode = 2
script = ExtResource("7_gwj8m")

[node name="continueending" type="TextureButton" parent="."]
custom_minimum_size = Vector2(50, 2)
layout_mode = 2
offset_left = 245.0
offset_top = 80.0
offset_right = 295.0
offset_bottom = 96.0

[node name="TextureRect" type="TextureRect" parent="continueending"]
layout_mode = 0
offset_left = 15.0
offset_top = -1.0
offset_right = 56.0
offset_bottom = 20.0
texture = ExtResource("5_5dy16")

[node name="continue" type="Label" parent="continueending"]
layout_mode = 0
offset_left = -20.0
offset_top = 4.0
offset_right = 36.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("4_vllma")
theme_override_font_sizes/font_size = 7
text = "Continue"

[node name="continueending2" type="TextureButton" parent="."]
visible = false
custom_minimum_size = Vector2(50, 2)
layout_mode = 2
offset_left = 245.0
offset_top = 80.0
offset_right = 295.0
offset_bottom = 96.0

[node name="TextureRect" type="TextureRect" parent="continueending2"]
layout_mode = 0
offset_left = 15.0
offset_top = -1.0
offset_right = 56.0
offset_bottom = 20.0
texture = ExtResource("5_5dy16")

[node name="back to menu" type="Label" parent="continueending2"]
layout_mode = 0
offset_left = -41.0
offset_top = 5.0
offset_right = 36.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("4_vllma")
theme_override_font_sizes/font_size = 7
text = "Back to menu
"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_hrf1v")
format = 2
layer_0/tile_data = PackedInt32Array(655360, 393216, 0, 720896, 393216, 1, 655361, 458752, 0, 720897, 458752, 1, 655362, 393216, 0, 720898, 393216, 1, 655363, 458752, 0, 720899, 458752, 1, 655364, 393216, 0, 720900, 393216, 1, 655365, 458752, 0, 720901, 458752, 1, 655366, 393216, 0, 720902, 393216, 1, 655367, 458752, 0, 720903, 458752, 1, 655368, 393216, 0, 720904, 393216, 1, 655369, 458752, 0, 720905, 458752, 1, 655370, 393216, 0, 720906, 393216, 1, 655371, 458752, 0, 720907, 458752, 1, 655372, 393216, 0, 720908, 393216, 1, 655373, 458752, 0, 720909, 458752, 1, 655374, 393216, 0, 720910, 393216, 1, 655375, 458752, 0, 720911, 458752, 1, 655376, 393216, 0, 720912, 393216, 1, 655377, 458752, 0, 720913, 458752, 1, 655378, 393216, 0, 720914, 393216, 1, 655379, 458752, 0, 720915, 458752, 1)

[node name="Squirrel" type="Sprite2D" parent="."]
visible = false
position = Vector2(299, 159)
texture = ExtResource("10_ehr8t")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_y7jre")
volume_db = -8.297
autoplay = true

[connection signal="pressed" from="continueending" to="." method="_on_continueending_pressed"]
[connection signal="pressed" from="continueending2" to="." method="_on_continueending_2_pressed"]
